fix cloud shifting page?

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
 
 #cloud7{
   width: 30vw;
-  left: 80vw;
+  left: 74.5vw;
   top: 15vw;
 }
 
